change toggle icon bar color

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -19,7 +19,7 @@ $navbar-default-link-hover-color:          #570c0b;
 $navbar-default-link-active-color:         #570c0b;
 
 $navbar-default-toggle-hover-bg:           transparent;
-$navbar-default-toggle-icon-bar-bg:        transparent;
+$navbar-default-toggle-icon-bar-bg:        #570c0b;
 $navbar-default-toggle-border-color:       #570c0b;
 
 $dropdown-link-color:            #570c0b;
