change table border color

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -27,6 +27,8 @@ $dropdown-link-hover-color:      #570c0b;
 $dropdown-border:                #570c0b;
 
 
+$table-border-color:            #570c0b;
+
 
 $navbar-inverse-link-color: #5AADBB;
 $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
