show image caption

--- a/src/app/lightbox/template.html
+++ b/src/app/lightbox/template.html
@@ -9,7 +9,7 @@
 
   <!-- caption -->
   <div class='text-center' style="margin: 1em 0 0;">
-    <strong>{{Lightbox.imageCaption}}</strong>
+    <p ng-repeat="line in Lightbox.imageCaption">{{line}}</p>
   </div>
 
 </div>
