change home -> zunfmeisterpaar

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,8 +1,6 @@
 <div class="text-center">
-  <h1>Willkommen auf der Homepage der Rhythmus Rammler Schlierbach</h1>
+  <h1>Wir gratulieren dem Zunftmeisterpaar<br />Manuel & Brigitte Waller-Arnold</h1>
   <div class="col-md-12" ng-repeat="entry in main.entries">
-    <a ng-click="main.openLightboxModal($index)" style="cursor: pointer">
-      <img ng-src="{{entry.thumbUrl}}" class="img-thumbnail" style="height: 400px;"/>
-    </a>
+      <img ng-src="assets/images/zunftmeisterpaar.jpg" class="img-thumbnail"/>
     </div>
 </div>
