use correct controller

--- a/src/app/impressum/impressum.html
+++ b/src/app/impressum/impressum.html
@@ -1,4 +1,4 @@
-<div class="text-center" ng-controller="VorstandController as vorstand">
+<div class="text-center" ng-controller="ImpressumController as impressum">
   <h1>Impressum</h1>
 
   <div class="row">
