--- a/src/app/rdw/rdw.html
+++ b/src/app/rdw/rdw.html
@@ -1,42 +1,7 @@
-<div class="text-center" ng-controller="RdwController as rdw" ng-if="!rdw.isEnded">
-  <h1>{{rdw.data.titel}}</h1>
-  <div class="col-md-4 col-sm-6 col-xs-12 col-height" ng-repeat="entry in rdw.data.entries">
-    <img ng-src="{{entry.thumbUrl}}" class="img-thumbnail" />
-    <br />
-    <br />
-    <input type="radio" ng-model="rdw.vote" value="{{entry.id}}" ng-if="rdw.showForm"/>
-    <span ng-if="!rdw.showForm"><strong>{{entry.stimmen}} ({{rdw.inPerc(entry.stimmen) | number : 2}}%)</strong></span>
-    <br />
-    <br />
-    <strong>{{entry.name}}</strong><br />
-    {{entry.text}}
-  </div>
-  <br />
-  <br />
-  <br />
-  <div class="col-md-12 col-sm-12 col-xs-12" ng-if="rdw.showForm">
-    <br />
-    <br />
-    <button ng-click="rdw.doVote()">
-      Abstimmen
-    </button>
-    <button ng-click="rdw.toggleForm()">
-      Ergebniss anzeigen
-    </button>
-  </div>
-  <div class="col-md-12 col-sm-12 col-xs-12" ng-if="!rdw.showForm && rdw.data.canVote">
-    <br />
-    <br />
-    <button ng-click="rdw.toggleForm()">
-      Formular anzeigen
-    </button>
-  </div>
-  </div>
-</div>
 <div class="text-center" ng-controller="RdwController as rdw" ng-if="rdw.isEnded">
-  <h1>{{rdw.data.titel}}</h1>
+  <h1>Rammler der Woche 1</h1>
   <div class="col-md-12 col-sm-12 col-xs-12 col-height">
-    <img ng-src="rdw.winner.thumbUrl" class="img-thumbnail" />
+    <img ng-src="rest/ch/rammler/register/thumb/40" class="img-thumbnail" />
     <br />
     <br />
     <strong>Petra Troxler</strong><br />
