show rdw 1 result

--- a/src/app/rdw/rdw.html
+++ b/src/app/rdw/rdw.html
@@ -1,4 +1,4 @@
-<div class="text-center" ng-controller="RdwController as rdw" ng-if="rdw.isEnded">
+<div class="text-center" ng-controller="RdwController as rdw">
   <h1>Rammler der Woche 1</h1>
   <div class="col-md-12 col-sm-12 col-xs-12 col-height">
     <img ng-src="rest/ch/rammler/register/thumb/40" class="img-thumbnail" />
