--- a/src/app/rdwNomination/rdwNomination.html
+++ b/src/app/rdwNomination/rdwNomination.html
@@ -2,7 +2,7 @@
   <h1>Rammler der Woche - Nomination</h1>
   <uib-alert type="{{rdw.alert.type}}" close="rdw.closeAlert()" ng-show="rdw.alert.show" >{{rdw.alert.msg}}</uib-alert>
   <div class="col-md-12 col-sm-12 col-xs-12 col-height" ng-if="!rdw.aktiv">
-    Aktuell können keine Kandidaten nominiert werden.
+    Aktuell k&ouml;nnen keine Kandidaten nominiert werden.
   </div>
   <div class="col-md-12 col-sm-12 col-xs-12 col-height" ng-if="rdw.aktiv">
     <form name="nominationForm">
