--- a/src/app/mitgliederportraitFragebogen/mitgliederportraitFragebogen.html
+++ b/src/app/mitgliederportraitFragebogen/mitgliederportraitFragebogen.html
@@ -34,6 +34,6 @@
     </form>
   </div>
   <div ng-show="!mitgliederportraitFragebogen.zeigeFototerminFragebogen">
-    <h3>Ausgewählter Fototermin: {{mitgliederportraitFragebogen.portrait.fototermin}}</h3>
+    <h3>Ausgew&auml;hlter Fototermin: {{mitgliederportraitFragebogen.portrait.fototermin}}</h3>
   </div>
 </div>
