new banner / style (cherry picked from commit 9f1ef50)

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -6,28 +6,28 @@
 // see -> _responsive-utilities.scss
 // see -> _variables.scss
 
-$rammler_red: #570c0b;
+$rammler_red: #191919;
 $text-color: $rammler_red;
 $link-color: $rammler_red;
 
-$navbar-default-color     : #570c0b;
+$navbar-default-color     : #191919;
 $navbar-default-bg:        transparent;
-$navbar-default-border:   #570c0b;
+$navbar-default-border:   #191919;
 
-$navbar-default-link-color:                #570c0b;
-$navbar-default-link-hover-color:          #570c0b;
-$navbar-default-link-active-color:         #570c0b;
+$navbar-default-link-color:                #191919;
+$navbar-default-link-hover-color:          #191919;
+$navbar-default-link-active-color:         #191919;
 
 $navbar-default-toggle-hover-bg:           transparent;
-$navbar-default-toggle-icon-bar-bg:        #570c0b;
-$navbar-default-toggle-border-color:       #570c0b;
+$navbar-default-toggle-icon-bar-bg:        #191919;
+$navbar-default-toggle-border-color:       #191919;
 
-$dropdown-link-color:            #570c0b;
-$dropdown-link-hover-color:      #570c0b;
-$dropdown-border:                #570c0b;
+$dropdown-link-color:            #191919;
+$dropdown-link-hover-color:      #191919;
+$dropdown-border:                #191919;
 
 
-$table-border-color:            #570c0b;
+$table-border-color:            #191919;
 
 
 $navbar-inverse-link-color: #5AADBB;
