--- a/src/app/mitglieddetail/mitglieddetail.html
+++ b/src/app/mitglieddetail/mitglieddetail.html
@@ -1,6 +1,6 @@
 <div class="text-center">
-  <h1 class="text-capitalize">{{Mitglieddetail.entry.vorname}} {{Mitglieddetail.entry.nachname}}</h1>
+  <h1 class="text-capitalize">{{mitglieddetail.entry.vorname}} {{mitglieddetail.entry.nachname}}</h1>
   <div class="col-md-3 col-sm-4 col-xs-6">
-      <img ng-src="{{Mitglieddetail.image}}" class="img-thumbnail">
+      <img ng-src="{{mitglieddetail.entry.image}}" class="img-thumbnail">
   </div>
 </div>
