--- a/src/app/mitglieddetail/mitglieddetail.html
+++ b/src/app/mitglieddetail/mitglieddetail.html
@@ -1,6 +1,22 @@
 <div class="text-center">
   <h1 class="text-capitalize">{{mitglieddetail.entry.vorname}} {{mitglieddetail.entry.nachname}}</h1>
-  <div class="col-md-3 col-sm-4 col-xs-6">
+  <div class="col-md-6 col-sm-6 col-xs-12" ng-if="mitglieddetail.entry.type == 'l'">
+    <table>
+      <tr ng-repeat="qa in mitglieddetail.entry.fragebogen">
+        <td>{{qa.frage}}</td>
+        <td>{{qa.antwort}}</td>
+      </tr>
+    </table>
+  </div>
+  <div class="col-md-6 col-sm-6 col-xs-12">
       <img ng-src="{{mitglieddetail.entry.image}}" class="img-thumbnail">
+  </div>
+  <div class="col-md-6 col-sm-6 col-xs-12" ng-if="mitglieddetail.entry.type == 'r'">
+    <table>
+      <tr ng-repeat="qa in mitglieddetail.entry.fragebogen">
+        <td>{{qa.frage}}</td>
+        <td>{{qa.antwort}}</td>
+      </tr>
+    </table>
   </div>
 </div>
