grösse der qa geändert

--- a/src/app/mitglieddetail/mitglieddetail.html
+++ b/src/app/mitglieddetail/mitglieddetail.html
@@ -14,8 +14,8 @@
   <div class="col-md-6 col-sm-6 col-xs-12" ng-if="mitglieddetail.type == 'r'">
     <table>
       <tr ng-repeat="qa in mitglieddetail.entry.fragebogen">
-        <td>{{qa.frage}}</td>
-        <td>{{qa.antwort}}</td>
+        <td><h3>{{qa.frage}}</h3></td>
+        <td><h3>{{qa.antwort}}</h3></td>
       </tr>
     </table>
   </div>
