--- a/src/app/mitglieddetail/mitglieddetail.html
+++ b/src/app/mitglieddetail/mitglieddetail.html
@@ -12,10 +12,10 @@
       <img ng-src="{{mitglieddetail.entry.image}}" class="img-thumbnail">
   </div>
   <div class="col-md-6 col-sm-6 col-xs-12" ng-if="mitglieddetail.type == 'r'">
-    <table>
+    <table width="100%">
       <tr ng-repeat="qa in mitglieddetail.entry.fragebogen">
-        <td><h3>{{qa.frage}}</h3></td>
-        <td><h3>{{qa.antwort}}</h3></td>
+        <td><h4>{{qa.frage}}</h4></td>
+        <td><h4>{{qa.antwort}}</h4></td>
       </tr>
     </table>
   </div>
