qa in verschiedenen zeilen

--- a/src/app/mitglieddetail/mitglieddetail.html
+++ b/src/app/mitglieddetail/mitglieddetail.html
@@ -1,12 +1,10 @@
 <div class="text-center">
   <h1 class="text-capitalize">{{mitglieddetail.entry.vorname}} {{mitglieddetail.entry.nachname}}</h1>
   <div class="col-md-6 col-sm-6 col-xs-12" ng-if="mitglieddetail.type == 'l'">
-    <table>
-      <tr ng-repeat="qa in mitglieddetail.entry.fragebogen">
-        <td>{{qa.frage}}</td>
-        <td>{{qa.antwort}}</td>
-      </tr>
-    </table>
+    <div ng-repeat="qa in mitglieddetail.entry.fragebogen">
+      <h3>{{qa.frage}}</h3>
+      <h4>{{qa.antwort}}</h4>
+    </div>
   </div>
   <div class="col-md-6 col-sm-6 col-xs-12">
       <img ng-src="{{mitglieddetail.entry.image}}" class="img-thumbnail">
