remove encoding problem

--- a/src/app/mitglieddetail/mitglieddetail.html
+++ b/src/app/mitglieddetail/mitglieddetail.html
@@ -6,7 +6,7 @@
       <h4>{{qa.antwort}}</h4>
     </div>
     <div ng-if="!mitglieddetail.entry.fragebogen">
-      <h3>Fragebogen noch nicht ausgefüllt</h3>
+      <h3>Fragebogen noch nicht ausgef&uuml;llt</h3>
     </div>
   </div>
   <div class="col-md-6 col-sm-6 col-xs-12">
