--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,5 +1,5 @@
 <div class="text-center">
   <div class="col-md-12">
-      <img ng-src="assets/images/Dankeskarte.png" class="img-thumbnail"/>
-    </div>
+    <img ng-src="assets/images/gruppenfoto.jpg" class="img-thumbnail"/>
+  </div>
 </div>
