--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -6,31 +6,37 @@
 // see -> _responsive-utilities.scss
 // see -> _variables.scss
 
-$rammler_red: #191919;
-$text-color: $rammler_red;
-$link-color: $rammler_red;
 
-$navbar-default-color     : #191919;
-$navbar-default-bg:        transparent;
-$navbar-default-border:   #191919;
-
-$navbar-default-link-color:                #191919;
-$navbar-default-link-hover-color:          #191919;
-$navbar-default-link-active-color:         #191919;
-
-$navbar-default-toggle-hover-bg:           transparent;
-$navbar-default-toggle-icon-bar-bg:        #191919;
-$navbar-default-toggle-border-color:       #191919;
-
-$dropdown-link-color:            #191919;
-$dropdown-link-hover-color:      #191919;
-$dropdown-border:                #191919;
+$rammler: #009fe3;
+$rammler_bg: #ffffff;
+$text-color: $rammler;
+$link-color: $rammler;
+$body-bg: $rammler_bg;
 
 
-$table-border-color:            #191919;
+$navbar-default-color     : $rammler;
+$navbar-default-bg:        $rammler_bg;
+$navbar-default-border:   $rammler;
+
+$navbar-default-link-color:                $rammler;
+$navbar-default-link-hover-color:          $rammler;
+$navbar-default-link-active-color:         $rammler;
+
+$navbar-default-toggle-hover-bg:           $rammler_bg;
+$navbar-default-toggle-icon-bar-bg:        $rammler;
+$navbar-default-toggle-border-color:       $rammler;
+
+$dropdown-bg: $rammler_bg;
+
+$dropdown-link-color:            $rammler;
+$dropdown-link-hover-color:      $rammler;
+$dropdown-border:                $rammler;
 
 
-$navbar-inverse-link-color: #5AADBB;
+$table-border-color:            $rammler;
+
+
+$navbar-inverse-link-color: $rammler;
 $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 
 /**
