--- a/src/app/vorstand/vorstand.html
+++ b/src/app/vorstand/vorstand.html
@@ -1,6 +1,6 @@
-<div class="text-center" ng-controller="VorstandController as vorstand">
+<div class="text-center">
   <h1>Vorstand</h1>
-  <div class="col-md-3 col-sm-4 col-xs-6 col-height" ng-repeat="mitglied in vorstand.entries">
+  <div class="col-md-3 col-sm-4 col-xs-6 col-height" ng-repeat="mitglied in $ctrl.entries">
     <img ng-src="{{mitglied.thumb}}" class="img-thumbnail" />
     <br />
     <strong>{{mitglied.funktion}}</strong><br />
