--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -12,7 +12,7 @@
   <div class="collapse navbar-collapse" ng-class="!navCollapsed && 'in'">
 
     <ul class="nav navbar-nav">
-      <li ng-repeat="element in navigation" uib-dropdown>
+      <li ng-repeat="element in $ctrl.navigation" uib-dropdown>
 
         <a ng-href="{{element.path}}" ng-if="element.dropdown === undefined">{{element.name}}</a>
         <a ng-href="{{element.path}}" uib-dropdown-toggle ng-if="element.dropdown !== undefined">{{element.name}} <b class="caret"></b></a>
