Komponente für Mitgliederportrait

--- a/src/app/mitgliederportrait/mitgliederportrait.html
+++ b/src/app/mitgliederportrait/mitgliederportrait.html
@@ -1,4 +1,4 @@
-<div class="text-center" ng-controller="MitgliederportraitController as $ctrl">
+<div class="text-center">
   <h1>Mitgliederportrait</h1>
   <table>
     <thead>
