--- a/src/app/mitgliederportraitFragebogen/mitgliederportraitFragebogen.html
+++ b/src/app/mitgliederportraitFragebogen/mitgliederportraitFragebogen.html
@@ -1,35 +1,35 @@
 <div class="text-center">
-  <h1>{{mitgliederportraitFragebogen.portrait.vorname}}
-    {{mitgliederportraitFragebogen.portrait.nachname}}</h1>
-  <div ng-show="mitgliederportraitFragebogen.zeigeFragenFormular">
+  <h1>{{$ctrl.portrait.vorname}}
+    {{$ctrl.portrait.nachname}}</h1>
+  <div ng-show="$ctrl.zeigeFragenFormular">
     <h2>Fragebogen</h2>
     <form name="fragebogen">
-      <div style="margin-bottom: 10px" ng-repeat="frage in mitgliederportraitFragebogen.fragen">
+      <div style="margin-bottom: 10px" ng-repeat="frage in $ctrl.fragen">
         <span style="display: inline-block; width: 250px;">{{frage.frage}}</span> <input type="text"
-                                                                                         ng-model="mitgliederportraitFragebogen.antworten[$index].antwort"
-                                                                                         ng-init="mitgliederportraitFragebogen.antworten[$index].frage=frage.id"
+                                                                                         ng-model="$ctrl.antworten[$index].antwort"
+                                                                                         ng-init="$ctrl.antworten[$index].frage=frage.id"
                                                                                          required/>
       </div>
       <div style="margin-bottom: 10px" ng-show="fragebogen.$valid">
         <span style="display: inline-block; width: 250px;"></span>
-        <input type="submit" ng-click="mitgliederportraitFragebogen.fragebogenSpeichern()" value="Speichern"/>
+        <input type="submit" ng-click="$ctrl.fragebogenSpeichern()" value="Speichern"/>
       </div>
     </form>
   </div>
-  <div ng-show="!mitgliederportraitFragebogen.zeigeFragenFormular">
+  <div ng-show="!$ctrl.zeigeFragenFormular">
     <h3>Fragebogen bereits gespeichert.</h3>
   </div>
-  <div ng-show="mitgliederportraitFragebogen.zeigeFototerminFragebogen" ng-if="false">
+  <div ng-show="$ctrl.zeigeFototerminFragebogen" ng-if="false">
     <h2>Fototermin</h2>
     <form name="fototermin">
-      <div style="margin-bottom: 10px" ng-repeat="fototermin in mitgliederportraitFragebogen.fototermine">
+      <div style="margin-bottom: 10px" ng-repeat="fototermin in $ctrl.fototermine">
         <label>
-        <input type="radio" ng-model="mitgliederportraitFragebogen.fototermin" value="{{fototermin.id}}">
+        <input type="radio" ng-model="$ctrl.fototermin" value="{{fototermin.id}}">
         {{fototermin.termin}}
       </label>
       </div>
-      <div style="margin-bottom: 10px" ng-show="mitgliederportraitFragebogen.fototermin > 0">
-        <input type="submit" ng-click="mitgliederportraitFragebogen.fototerminSpeichern()" value="Speichern"/>
+      <div style="margin-bottom: 10px" ng-show="$ctrl.fototermin > 0">
+        <input type="submit" ng-click="$ctrl.fototerminSpeichern()" value="Speichern"/>
       </div>
     </form>
   </div>
