Komponente für Rammler der Woche

--- a/src/app/rdwDetail/rdwDetail.html
+++ b/src/app/rdwDetail/rdwDetail.html
@@ -1,11 +1,11 @@
 <div class="text-center">
-  <h1>{{rdwDetail.data.titel}}</h1>
-  <div class="col-md-4 col-sm-6 col-xs-12 col-height" ng-repeat="entry in rdwDetail.data.entries">
+  <h1>{{$ctrl.data.titel}}</h1>
+  <div class="col-md-4 col-sm-6 col-xs-12 col-height" ng-repeat="entry in $ctrl.data.entries">
     <img ng-src="{{entry.thumbUrl}}" class="img-thumbnail" />
     <br />
     <br />
-    <input type="radio" ng-model="rdwDetail.vote" value="{{entry.id}}" ng-if="rdwDetail.showForm"/>
-    <span ng-if="!rdwDetail.showForm"><strong>{{rdwDetail.inPerc(entry.stimmen) | number : 2}}%</strong></span>
+    <input type="radio" ng-model="$ctrl.vote" value="{{entry.id}}" ng-if="$ctrl.showForm"/>
+    <span ng-if="!$ctrl.showForm"><strong>{{$ctrl.inPerc(entry.stimmen) | number : 2}}%</strong></span>
     <br />
     <br />
     <strong>{{entry.name}}</strong><br />
@@ -14,20 +14,20 @@
   <br />
   <br />
   <br />
-  <div class="col-md-12 col-sm-12 col-xs-12" ng-if="rdwDetail.showForm">
+  <div class="col-md-12 col-sm-12 col-xs-12" ng-if="$ctrl.showForm">
     <br />
     <br />
-    <button ng-click="rdwDetail.doVote()" ng-if="rdwDetail.vote > 0">
+    <button ng-click="$ctrl.doVote()" ng-if="$ctrl.vote > 0">
       Abstimmen
     </button>
-    <button ng-click="rdwDetail.toggleForm()">
+    <button ng-click="$ctrl.toggleForm()">
       Ergebniss anzeigen
     </button>
   </div>
-  <div class="col-md-12 col-sm-12 col-xs-12" ng-if="!rdwDetail.showForm && rdwDetail.data.canVote">
+  <div class="col-md-12 col-sm-12 col-xs-12" ng-if="!$ctrl.showForm && $ctrl.data.canVote">
     <br />
     <br />
-    <button ng-click="rdwDetail.toggleForm()">
+    <button ng-click="$ctrl.toggleForm()">
       Formular anzeigen
     </button>
   </div>
