--- a/src/app/galerieDetail/galerieDetail.html
+++ b/src/app/galerieDetail/galerieDetail.html
@@ -1,6 +1,6 @@
 <div class="text-center">
   <h1 class="text-capitalize">{{$ctrl.data.name}}</h1>
-  <div class="col-md-3 col-sm-4 col-xs-6 " ng-repeat="gal in $ctrl.data.bilder" >
+  <div class="col-md-3 col-sm-4 col-xs-6 " ng-repeat="gal in $ctrl.data.bilder" style="margin-bottom: 10px">
     <a ng-click="$ctrl.openLightboxModal($index)" style="cursor: pointer;">
       <img ng-src="{{gal.thumbUrl}}" class="img-thumbnail" style="height: 150px">
     </a>
