--- a/src/app/galerie/galerie.html
+++ b/src/app/galerie/galerie.html
@@ -1,6 +1,6 @@
 <div class="text-center">
   <div class="col-md-12 col-sm-12 col-xs-12 " ng-repeat="gal in $ctrl.data" >
     <h1 class="text-capitalize">{{gal.name}}</h1>
-    <a href="/galerie/{{gal.id}}"><img ng-src="{{gal.thumbUrl}}" class="img-thumbnail" style="height: 150px"></a>
+    <a href="/galerien/{{$ctrl.saison}}/{{gal.id}}"><img ng-src="{{gal.thumbUrl}}" class="img-thumbnail" style="height: 150px"></a>
   </div>
 </div>
