Rammler der Woche eingeschaltet

--- a/src/app/rdw/rdw.html
+++ b/src/app/rdw/rdw.html
@@ -3,7 +3,7 @@
     <h1 class="text-capitalize">{{entry.titel}}</h1>
     <a href="/rdw/{{entry.id}}">
       <img ng-src="{{entry.sieger.thumbUrl}}" class="img-thumbnail" ng-show="entry.isEnded == 1">
-      <img ng-src="assets/images/abstimmung.png" class="img-thumbnail" style="height: 150px" ng-show="entry.isEnded == 0">
+      <img ng-src="assets/images/abstimmung.png" style="height: 150px" ng-show="entry.isEnded == 0">
     </a>
   </div>
 </div>
